# weilliptic_mcp

credit_score/: CMakeLists.txt  bindings.rs  credit_score.widl  deployed_contract.json  mcp_snippet.sh  mcp_snippets.txt
credit_score/include/weilsdk/collections/: map.hpp
credit_score/src/: contract.hpp  main.cpp
in_memory_db/: CMakeLists.txt  bindings.rs  bindings.ts  deployed_contract.json  deployed_contract_mcp.json  in_memory_db.widl  in_memory_db_mcp.widl  mcp_snippet.sh  mcp_snippets.txt
in_memory_db/src/: contract.hpp  main.cpp
